corrected a few typos